--- a/ML1/exercises/olympic_history.ipynb
+++ b/ML1/exercises/olympic_history.ipynb
@@ -12,8 +12,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -31,33 +33,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = # your code here"
+    "df = pd.read_csv('athlete_events.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
        "    }\n",
        "\n",
        "    .dataframe tbody tr th {\n",
        "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
@@ -199,7 +201,7 @@
        "4  Speed Skating Women's 500 metres   NaN  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,24 +212,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
        "    }\n",
        "\n",
        "    .dataframe tbody tr th {\n",
        "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
@@ -332,7 +334,7 @@
        "max      2016.000000  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,10 +354,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ID                                        71691\n",
+       "Name                         Dimitrios Loundras\n",
+       "Sex                                           M\n",
+       "Age                                          10\n",
+       "Height                                      NaN\n",
+       "Weight                                      NaN\n",
+       "Team              Ethnikos Gymnastikos Syllogos\n",
+       "NOC                                         GRE\n",
+       "Games                               1896 Summer\n",
+       "Year                                       1896\n",
+       "Season                                   Summer\n",
+       "City                                     Athina\n",
+       "Sport                                Gymnastics\n",
+       "Event     Gymnastics Men's Parallel Bars, Teams\n",
+       "Medal                                    Bronze\n",
+       "Name: 142882, dtype: object"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.loc[df.Age.idxmin()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ID                                             128719\n",
+       "Name                           John Quincy Adams Ward\n",
+       "Sex                                                 M\n",
+       "Age                                                97\n",
+       "Height                                            NaN\n",
+       "Weight                                            NaN\n",
+       "Team                                    United States\n",
+       "NOC                                               USA\n",
+       "Games                                     1928 Summer\n",
+       "Year                                             1928\n",
+       "Season                                         Summer\n",
+       "City                                        Amsterdam\n",
+       "Sport                                Art Competitions\n",
+       "Event     Art Competitions Mixed Sculpturing, Statues\n",
+       "Medal                                             NaN\n",
+       "Name: 257054, dtype: object"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.loc[df.Age.idxmax()]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -366,10 +431,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "135571"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.ID.nunique()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -380,10 +458,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "28251"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df.Medal.notnull()].ID.nunique()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -394,10 +485,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Medal\n",
+       "Bronze    13295\n",
+       "Gold      13372\n",
+       "Silver    13116\n",
+       "Name: ID, dtype: int64"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.groupby('Medal').ID.count()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -408,10 +516,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Sport\n",
+       "Rugby Sevens    2016\n",
+       "Triathlon       2000\n",
+       "Trampolining    2000\n",
+       "Taekwondo       2000\n",
+       "Snowboarding    1998\n",
+       "Name: Year, dtype: int64"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "newest_sport = df.groupby('Sport').Year.min()\n",
+    "newest_sport.sort_values(ascending=False).head()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -422,10 +550,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2016"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df.Season=='Summer'].Year.max()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -436,10 +577,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "City\n",
+       "London          3\n",
+       "Athina          3\n",
+       "Stockholm       2\n",
+       "Sankt Moritz    2\n",
+       "Paris           2\n",
+       "Los Angeles     2\n",
+       "Lake Placid     2\n",
+       "Innsbruck       2\n",
+       "Name: Year, dtype: int64"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "games_count = df.groupby('City').Year.nunique()\n",
+    "games_count[games_count>=2].sort_values(ascending=False)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -450,10 +614,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x0000018554FB8518>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x00000185548A53C8>]], dtype=object)"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.hist(['Age','Height'], bins=30)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -464,10 +642,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.axes._subplots.AxesSubplot at 0x185548a53c8>"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.Weight.hist()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -500,7 +691,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
@@ -514,14 +707,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
@@ -542,7 +739,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
