--- a/ML1/exercises/olympic_history_solutions.ipynb
+++ b/ML1/exercises/olympic_history_solutions.ipynb
@@ -13,7 +13,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -32,7 +34,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df = pd.read_csv('athlete_events.csv')"
@@ -40,9 +44,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Volume in drive D is Western Digital 1TB HDD\n",
+      " Volume Serial Number is 32C5-8C11\n",
+      "\n",
+      " Directory of D:\\Software Projects\\Semester5\\AI-with-Python\\ML1\\exercises\n",
+      "\n",
+      "2018-10-08  02:52 PM    <DIR>          .\n",
+      "2018-10-08  02:52 PM    <DIR>          ..\n",
+      "2018-10-08  01:45 PM             6,148 .DS_Store\n",
+      "2018-10-08  02:46 PM    <DIR>          .ipynb_checkpoints\n",
+      "2018-10-08  01:45 PM           345,893 active_satellites.csv\n",
+      "2018-10-08  01:45 PM            34,455 active_satellites.ipynb\n",
+      "2018-06-15  06:10 AM        41,500,688 athlete_events.csv\n",
+      "2018-10-08  01:45 PM            11,472 numpy_assignment.py\n",
+      "2018-09-24  10:34 AM            23,713 numpy_basics.ipynb\n",
+      "2018-10-08  02:52 PM            48,088 olympic_history.ipynb\n",
+      "2018-10-08  01:45 PM           255,646 olympic_history_solutions.ipynb\n",
+      "2018-09-24  09:01 AM             6,268 OshawaWeather2016.csv\n",
+      "2018-10-08  02:39 PM           187,739 plotting_basics.ipynb\n",
+      "              10 File(s)     42,420,110 bytes\n",
+      "               3 Dir(s)  624,052,084,736 bytes free\n"
+     ]
+    }
+   ],
    "source": [
     "# Note, in this case the CSV file is in the same folder as the Jupyter notebook.\n",
     "# You can use the !dir command to see the path to this notebook and other files in the same dir.\n",
@@ -1438,7 +1469,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
@@ -1459,7 +1492,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
