--- a/ML1/exercises/credit_score.ipynb
+++ b/ML1/exercises/credit_score.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,16 +43,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('../../mlcourse.ai/data/credit_scoring_sample.csv', sep=';')"
+    "df = pd.read_csv('credit_scoring_sample.csv', sep=';')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
        "NumberOfDependents                        2.00000    0.00000  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,10 +192,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "45063"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(df)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -208,10 +221,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "22.248851607749152"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.SeriousDlqin2yrs.mean() * 100"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -224,17 +250,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "y_predict = np.zeros(df.SeriousDlqin2yrs.count())\n",
+    "y_true = df.SeriousDlqin2yrs\n",
+    "from sklearn.metrics import accuracy_score"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7775114839225085"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracy_score(y_true, y_predict)"
+   ]
   },
   {
    "cell_type": "code",
@@ -253,10 +296,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SeriousDlqin2yrs                        False\n",
+       "age                                     False\n",
+       "NumberOfTime30-59DaysPastDueNotWorse    False\n",
+       "DebtRatio                               False\n",
+       "NumberOfTimes90DaysLate                 False\n",
+       "NumberOfTime60-89DaysPastDueNotWorse    False\n",
+       "MonthlyIncome                           False\n",
+       "NumberOfDependents                       True\n",
+       "dtype: bool"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.isnull().any()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -268,10 +332,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df.MonthlyIncome.fillna(df.MonthlyIncome.median(), inplace = True)\n",
+    "df.NumberOfDependents.fillna(df.NumberOfDepend)"
+   ]
   },
   {
    "cell_type": "markdown",
